# Halide

./: CMakeLists.txt  Makefile
apps/bilateral_grid/: Makefile  bilateral_grid_generator.cpp  filter.cpp
apps/conv_layer/: CMakeLists.txt  Makefile  process.cpp
apps/lens_blur/: CMakeLists.txt  Makefile  lens_blur_generator.cpp  process.cpp
apps/local_laplacian/: Makefile  local_laplacian_generator.cpp  process.cpp
apps/nl_means/: CMakeLists.txt  Makefile  nl_means_generator.cpp  process.cpp
src/: AutoSchedule.cpp  AutoSchedule.h  AutoScheduleUtils.cpp  AutoScheduleUtils.h  Bounds.h  Buffer.cpp  CMakeLists.txt  CSE.cpp  CodeGen_LLVM.cpp  CodeGen_LLVM.h  Expr.h  Func.cpp  Func.h  Function.cpp  Function.h  Generator.cpp  Generator.h  IR.cpp  IREquality.cpp  IREquality.h  IRVisitor.cpp  IRVisitor.h  Inline.cpp  Inline.h  IntrusivePtr.h  JITModule.cpp  LLVM_Runtime_Linker.cpp  Param.h  Parameter.cpp  Parameter.h  PartitionLoops.cpp  Pipeline.cpp  Pipeline.h  Reduction.cpp  RegionCosts.cpp  RegionCosts.h  Schedule.cpp  Schedule.h  Target.h
test/auto_schedule/: bilateral.cpp  conv_layer.cpp  cost_function.cpp  data_dependent.cpp  extern.cpp  fibonacci.cpp  harris.cpp  histogram.cpp  iir.cpp  laplacian.cpp  large_window.cpp  lens_blur.cpp  mat_mul.cpp  max_filter.cpp  multi_output.cpp  nl_means.cpp  overlap.cpp  param.cpp  reorder.cpp  tile_vs_inline.cpp  unsharp.cpp  vectorize_var_in_update.cpp
tutorial/: lesson_19_staging_func_or_image_param.cpp
tutorial/figures/: generate_figures_19.sh
